@@ -11,6 +11,8 @@ Version 5.1.4
   - Fixed problem where attempting to enlist in a distributed transaction would succeed
     even though Connector/Net doesn't currently support that. (Bug #31703)
   - Fixed problem with web providers not being usable on medium trust systems      
+  - Fixed problem with installer where attempting to install over a failed uninstall could 
+    leave multiple clients registered in machine.config.  (Bug #31731)      
       
 Version 5.1.3 - 9/19/2007
   - Fixed problem with using a stored procedure that takes a parameter as a select routine
